[package]
name = "oscar-io"
version = "0.2.4"
edition = "2021"
description = "Readers/Writers for GlotCC/OSCAR Corpora."
documentation = "https://github.com/cisnlp/oscar-io/blob/main/README.md"
homepage = "https://github.com/cisnlp/oscar-io"
repository = "https://github.com/oscar-corpus/oscar-io"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
log = "0.4.16"
schemars = "0.8.8"
serde = "1.0.136"
serde_json = "1.0.79"
warc = { version = "0.3.1", features = ["with_serde"]}

avro-rs = { version = "0.13.0", features = ["snappy"]}
oxilangtag = { version = "0.1.3", features = ["serde"]}

[dev-dependencies]
tempfile = "3.3.0"

